-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 15.0.1
-
-
d291ff5a4 (master)
Cannot save customised Quick code style in Edit>Preferences>Qt Quick > Code Style. Even after apply and using same custom settings new code style is not honored. Attached is the screen recording which shows custom curly braces style are not horned.
For Gerrit Dashboard: QTCREATORBUG-32956 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
683084,4 | Style Settings: Make Code Style preview more obvious | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
683105,4 | Style Settings: Make Code Style preview more obvious | 18.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |