Style Settings: Make Code Style preview more obvious

Fixes: QTCREATORBUG-32956
Change-Id: I55aa01e7421cb1633072b046d2b4c42a2ce8a3cd
Reviewed-by: hjk <hjk@qt.io>